Added HealthEvent's, HealthEventListenerRegistry API changes