@@ -1,39 +1,32 @@
 package org.vitals.core.history;
 
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Set;
+import com.google.common.base.Preconditions;
+import jakarta.annotation.Nonnull;
+import org.vitals.core.HealthCheck;
+import org.vitals.core.HealthCheck.HealthCheckResult;
+import org.vitals.core.aggregator.HealthResultAggregator;
+import org.vitals.core.event.*;
+import org.vitals.core.filter.HealthCheckFilter;
+import org.vitals.core.filter.HealthCheckFilterContext;
+import org.vitals.core.registry.HealthCheckRegistry;
+
+import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.LinkedBlockingDeque;
 import java.util.stream.Collectors;
-
-import jakarta.annotation.Nonnull;
-
-import org.vitals.core.aggregator.HealthResultAggregator;
-import org.vitals.core.HealthCheck;
-import org.vitals.core.HealthCheck.HealthCheckResult;
-import org.vitals.core.filter.HealthCheckFilter;
-import org.vitals.core.filter.HealthCheckFilterContext;
-import org.vitals.core.listener.StatusUpdateDelegate;
-import org.vitals.core.registry.HealthCheckRegistry;
-
-import com.google.common.base.Preconditions;
 
 public class DefaultHealthCheckHistory implements HealthCheckHistory {
 
     private final int maxHistorySize;
     private final Map<String, LinkedBlockingDeque<HealthCheckResult>> historyMap;
-    private final StatusUpdateDelegate statusUpdateDelegate;
+    private final HealthEventPublisher domainEventPublisher;
     private final HealthCheckRegistry healthCheckRegistry;
 
-    public DefaultHealthCheckHistory(int maxHistorySize, StatusUpdateDelegate statusUpdateDelegate,
-            HealthCheckRegistry healthCheckRegistry) {
+    public DefaultHealthCheckHistory(int maxHistorySize, HealthEventPublisher domainEventPublisher,
+                                     HealthCheckRegistry healthCheckRegistry) {
         this.maxHistorySize = maxHistorySize;
         this.historyMap = new ConcurrentHashMap<>();
-        this.statusUpdateDelegate = statusUpdateDelegate;
+        this.domainEventPublisher = domainEventPublisher;
         this.healthCheckRegistry = healthCheckRegistry;
     }
 
@@ -52,16 +45,13 @@ public class DefaultHealthCheckHistory implements HealthCheckHistory {
 
         historyQueue.offerLast(result);
 
-        this.statusUpdateDelegate.onHealthChecked(healthCheck.getName(), healthCheck.getTags(), healthCheck,
-                result);
+        this.domainEventPublisher.publish(
+                new HealthCheckCheckedEvent(healthCheck.getName(), healthCheck.getTags(), healthCheck, result));
 
         if (!Objects.equals(latestResult, result)) {
-            this.statusUpdateDelegate.onChanged(
-                    healthCheck.getName(),
-                    healthCheck.getTags(),
-                    healthCheck,
-                    latestResult,
-                    result);
+            this.domainEventPublisher.publish(new HealthCheckStatusChangedEvent(healthCheck.getName(),
+                    healthCheck.getTags(), healthCheck, latestResult,
+                    result));
         }
 
         // Get the latest results of all checks for aggregation
@@ -81,8 +71,8 @@ public class DefaultHealthCheckHistory implements HealthCheckHistory {
             String aggregatorName = aggregator.getName();
 
             // Get the current aggregated result
-            LinkedBlockingDeque<HealthCheckResult> aggregatedQueue = this.historyMap
-                    .computeIfAbsent(aggregatorName, k -> new LinkedBlockingDeque<>(maxHistorySize));
+            LinkedBlockingDeque<HealthCheckResult> aggregatedQueue = this.historyMap.computeIfAbsent(aggregatorName,
+                    k -> new LinkedBlockingDeque<>(maxHistorySize));
 
             HealthCheckResult previousAggregated = aggregatedQueue.peekLast();
             HealthCheckResult newAggregated = aggregator.aggregate(latestResults);
@@ -94,14 +84,12 @@ public class DefaultHealthCheckHistory implements HealthCheckHistory {
             aggregatedQueue.offerLast(newAggregated);
 
             // Notify that the aggregation occurred
-            this.statusUpdateDelegate.onHealthResultAggregated(aggregatorName, newAggregated);
+            this.domainEventPublisher.publish(new HealthResultAggregatedEvent(aggregatorName, newAggregated));
 
             // If the aggregated result has changed, notify the change
             if (!Objects.equals(previousAggregated, newAggregated)) {
-                this.statusUpdateDelegate.onAggregatedResultChanged(
-                        aggregatorName,
-                        previousAggregated,
-                        newAggregated);
+                this.domainEventPublisher
+                        .publish(new AggregatedResultChangedEvent(aggregatorName, previousAggregated, newAggregated));
             }
         }
     }
@@ -113,9 +101,7 @@ public class DefaultHealthCheckHistory implements HealthCheckHistory {
 
         LinkedBlockingDeque<HealthCheckResult> historyQueue = this.historyMap.get(name);
 
-        return historyQueue != null
-                ? List.copyOf(historyQueue)
-                : Collections.emptyList();
+        return historyQueue != null ? List.copyOf(historyQueue) : Collections.emptyList();
     }
 
     @Override
@@ -124,8 +110,7 @@ public class DefaultHealthCheckHistory implements HealthCheckHistory {
 
         return this.historyMap.entrySet()
                 .stream()
-                .flatMap(entry -> entry.getValue().stream()
-                        .map(result -> createContext(entry.getKey(), result)))
+                .flatMap(entry -> entry.getValue().stream().map(result -> createContext(entry.getKey(), result)))
                 .filter(healthCheckFilter::matches)
                 .map(HealthCheckFilterContext::healthCheckResult)
                 .collect(Collectors.toSet());
@@ -140,8 +125,8 @@ public class DefaultHealthCheckHistory implements HealthCheckHistory {
         return this.healthCheckRegistry.getHealthCheck(name)
                 .map(hc -> new HealthCheckFilterContext(name, hc, result, hc.getTags()))
                 .orElseGet(() -> new HealthCheckFilterContext(name, null, result, null)); // if not hc then must be
-                                                                                          // getting history of
-                                                                                          // aggregator
+        // getting history of
+        // aggregator
     }
 
 }
